--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "ghost-starter-theme",
-    "description": "A custom theme for ghost",
-    "demo": "https://starter.ghost.io",
-    "version": "1.0.0",
+    "name": "latex-ghost",
+    "description": "A LaTeX theme for ghost",
+    "demo": "https://ivmoreau.com",
+    "version": "0.1.0",
     "engines": {
         "ghost": ">=4.0.0",
         "ghost-api": "v4"
@@ -21,9 +21,9 @@
         "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version && git push --follow-tags; fi"
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "Iván Molina Rebolledo",
+        "email": "ivanmolinarebolledo@gmail.com",
+        "url": "https://ivmoreau.com"
     },
     "gpm": {
         "type": "theme",
@@ -83,5 +83,10 @@
                 "width": 2000
             }
         }
+    },
+    "dependencies": {
+        "latex.css": "^1.5.0",
+        "postcss": "^8.2.8",
+        "katex": "^0.15.1"
     }
 }
