--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "latex-ghost",
     "description": "A LaTeX theme for ghost",
     "demo": "https://ivmoreau.com",
-    "version": "0.1.0",
+    "version": "1.0.1",
     "engines": {
         "ghost": ">=4.0.0",
         "ghost-api": "v4"
@@ -39,10 +39,10 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Starter.git"
+        "url": "https://github.com/ivanmoreau/latex-ghost.git"
     },
-    "bugs": "https://github.com/TryGhost/Starter/issues",
-    "contributors": "https://github.com/TryGhost/Starter/graphs/contributors",
+    "bugs": "https://github.com/ivanmoreau/latex-ghost/issues",
+    "contributors": "https://github.com/ivanmoreau/latex-ghost/graphs/contributors",
     "devDependencies": {
         "autoprefixer": "10.2.5",
         "cssnano": "4.1.10",
